--- a/Registration.html
+++ b/Registration.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<title>Registration Form</title>
-	<style>
-
-p{border:2px solid black;
-   padding: 15px;}
-
-}   
-</style>
 </head>
 <body>
 	<h1>Registration from</h1>
@@ -35,8 +27,9 @@ p{border:2px solid black;
 		<br><br>
 		<label for="religion">Religion</label>
 		<select id="religion" name="Religion">
-			<option value="Muslim">Muslim</option>
+			<option value="islam">Muslim</option>
 			<option value="Hindu">Hindu</option>
+			<option value="khristan">Khristan</option>
 		</select>
 		<br><br>
 		<label>Father's Name:</label>
@@ -84,11 +77,7 @@ p{border:2px solid black;
      </fieldset>
      <br>
      <input type="submit" value="Submit">
-
-
-
-
-	</form>
+</form>
 
 </body>
 </html>
